5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1582_1326.log
== TEST (2019-03-12 17:36:17) 
-- CODE:
("")
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:36:18) 
-- CODE:
("")
-- EXECUTION TIME:
0.201879
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:36) 
-- CODE:
("")
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:36:37) 
-- CODE:
("")
-- EXECUTION TIME:
0.149402
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:36:56) 
-- CODE:
(R$75)
-- ERROR:
File "XXXX", line 1
    (R$75)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:36:58) 
-- CODE:
(R$75)
-- EXECUTION TIME:
0.145846
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    (R$75)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:17) 
-- CODE:
(R$75)
-- ERROR:
File "XXXX", line 1
    (R$75)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:18) 
-- CODE:
(R$75)
-- EXECUTION TIME:
0.141251
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    (R$75)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:47) 
-- CODE:
("75")
-- ERROR:
File "XXXX", line 1
    (R$75)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:48) 
-- CODE:
("75")
-- EXECUTION TIME:
0.121627
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:09) 
-- CODE:
("75")
-- ERROR:
File "XXXX", line 1
    (R$75)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:10) 
-- CODE:
("75")
-- EXECUTION TIME:
0.190429
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:52) 
-- CODE:
("75")
-- ERROR:
File "XXXX", line 1
    (R$75)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:53) 
-- CODE:
("75")
-- EXECUTION TIME:
0.162225
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:25) 
-- CODE:
("R$75")
-- ERROR:
File "XXXX", line 1
    (R$75)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:26) 
-- CODE:
("R$75")
-- EXECUTION TIME:
0.203284
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:55) 
-- CODE:
( 75 )
-- ERROR:
File "XXXX", line 1
    (R$75)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:56) 
-- CODE:
( 75 )
-- EXECUTION TIME:
0.200034
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:30) 
-- CODE:
(40+35)
-- ERROR:
File "XXXX", line 1
    (R$75)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:31) 
-- CODE:
(40+35)
-- EXECUTION TIME:
0.182377
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:40) 
-- CODE:
(40 35)
-- ERROR:
File "XXXX", line 1
    (40 35)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:42) 
-- CODE:
(40 35)
-- EXECUTION TIME:
0.1584
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    (40 35)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:47) 
-- CODE:
(40 35)
-- ERROR:
File "XXXX", line 1
    (40 35)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:48) 
-- CODE:
(40 35)
-- EXECUTION TIME:
0.176208
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    (40 35)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:43:19) 
-- CODE:
( 75 )
-- ERROR:
File "XXXX", line 1
    (40 35)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:43:20) 
-- CODE:
( 75 )
-- EXECUTION TIME:
0.192354
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:26) 
-- CODE:
(40+35)
-- ERROR:
File "XXXX", line 1
    (40 35)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:44:27) 
-- CODE:
(40+35)
-- EXECUTION TIME:
0.137186
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:02) 
-- CODE:
(40+ 35)
-- ERROR:
File "XXXX", line 1
    (40 35)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:46:04) 
-- CODE:
(40+ 35)
-- EXECUTION TIME:
0.176277
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:07) 
-- CODE:
(40 + 35)
-- ERROR:
File "XXXX", line 1
    (40 35)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:46:08) 
-- CODE:
(40 + 35)
-- EXECUTION TIME:
0.113909
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:47:50) 
-- CODE:
(40+35)
-- ERROR:
File "XXXX", line 1
    (40 35)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:47:51) 
-- CODE:
(40+35)
-- EXECUTION TIME:
0.135589
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:48:37) 
-- CODE:
(R$ 40+R$ 35)
-- ERROR:
File "XXXX", line 1
    (R$ 40+R$ 35)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:48:38) 
-- CODE:
(R$ 40+R$ 35)
-- EXECUTION TIME:
0.152642
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    (R$ 40+R$ 35)
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:32) 
-- CODE:
(40+35)
-- ERROR:
File "XXXX", line 1
    (R$ 40+R$ 35)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:49:33) 
-- CODE:
(40+35)
-- EXECUTION TIME:
0.149208
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:50:42) 
-- CODE:
(40+30)
-- ERROR:
File "XXXX", line 1
    (R$ 40+R$ 35)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:50:43) 
-- CODE:
(40+30)
-- EXECUTION TIME:
0.116487
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:51:29) 
-- CODE:
 (40+35)
-- ERROR:
File "XXXX", line 1
    (40+35)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:51:40) 
-- CODE:
 40+35)
-- ERROR:
File "XXXX", line 1
    40+35)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:51:40) 
-- CODE:
 40+35)
-- EXECUTION TIME:
0.20373
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    40+35)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:52:35) 
-- CODE:
 (40+35)
-- ERROR:
File "XXXX", line 1
    (40+35)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:52:36) 
-- CODE:
 (40+35)
-- EXECUTION TIME:
0.148979
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    (40+35)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:53:16) 
-- CODE:
(40+35)
-- ERROR:
File "XXXX", line 1
    (40+35)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:53:17) 
-- CODE:
(40+35)
-- EXECUTION TIME:
0.152831
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:05:52) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:05:53) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.158468
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
